<resources>
    <string name="app_name">Hoptical</string>
    <string name="action_settings">Settings</string>
    <string name="default_beer_title">Beer Title</string>
    <string name="default_brewery">Brewery</string>
    <string name="default_location_text">Where did you drink this?</string>
    <string name="get_drinking_location_button">Add Location</string>
    <string name="drinking_buddy_button">Add Drinking Buddy</string>
    <string name="upload_image_button">Capture Image</string>
    <string name="delete_image_button">Retake Image</string>
    <string name="default_tasting_notes">Tasting Notes</string>
    <string name="save_button">Save</string>
    <string name="default_beer_description">description</string>
    <string name="default_food_pairings">Goes well with...</string>
    <string name="default_drinking_buddy">drinking_buddy</string>
    <string name="view_more_button">View</string>
    <string name="discover_text">Discover your next favourite beer!</string>
    <string name="default_review_title">Your review</string>

    <string name="title_text">Sign-In</string>
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed into Hoptical</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out of Hoptical</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
enabled for your project, you have a properly configured google-services.json file
and that your device has an internet connection.</string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="server_client_id">your client id token goes here!!!!</string>
    <string name="welcome_text">Hoptical</string>
    <string name="default_catchline">Craft Beer Tracker</string>
    <string name="beer_memory_date">01/01/2018</string>
</resources>
