<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBeerMemoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/top_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            app:theme="@style/ToolBarStyle" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/beerImageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/beer_outline"
                        tools:background="#62aaaaaa"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/beerName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/default_beer_title"
                            android:inputType="textPersonName"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="8dp"/>

                        <EditText
                            android:id="@+id/beerBrewery"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/default_brewery"
                            android:inputType="textPersonName"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="8dp"/>

                        <TextView
                            android:id="@+id/locationText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/default_location_text"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/getLocationButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onGetLocationClick"
                        android:text="@string/get_drinking_location_button"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="4dp"/>

                    <Button
                        android:id="@+id/drinkingBuddyButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="onChooseContactClick"
                        android:text="@string/drinking_buddy_button"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="8dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:elevation="0dp"
                        android:onClick="onAddImageClick"
                        android:text="@string/upload_image_button"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="4dp"/>

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_weight="1"
                        android:onClick="onAddImageClick"
                        android:text="@string/delete_image_button"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="8dp"/>
                </LinearLayout>

                <EditText
                    android:id="@+id/tastingNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/default_tasting_notes"
                    android:inputType="textMultiLine"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>

                <Button
                    android:id="@+id/saveMemoryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="onSaveMemoryClick"
                    android:text="@string/save_button"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>