<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        style="@style/beerCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@android:color/background_light"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/beerDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_beer_title"
                android:textAppearance="@android:style/TextAppearance.Material.Large"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/beerDetailBrewery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_brewery"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/beerDetailTitle" />

            <TextView
                android:id="@+id/beerMemoryDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beer_memory_date"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/beerDetailBrewery" />


            <TextView
                android:id="@+id/beerDetailLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/default_location_text"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                app:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/beerDetailTitle" />

            <ImageView
                android:id="@+id/beerMemoryImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/beer_outline"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/beerDetailBrewery" />

            <Button
                android:id="@+id/viewMemoryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="onMemoryClick"
                android:text="@string/view_more_button"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>